# ruv-FANN

./: .gitignore  CLI_DEVELOPMENT_SUCCESS_REPORT.md  Cargo.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.swarm/: memory.db  memory.db-shm  memory.db-wal
Semantic_Cartan_Matrix/: CODE_REVIEW_REPORT.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  run_benchmarks.sh
Semantic_Cartan_Matrix/.claude-flow/metrics/: performance.json  task-metrics.json
Semantic_Cartan_Matrix/benches/: cartan_performance.rs
Semantic_Cartan_Matrix/docs/: algorithms.md
Semantic_Cartan_Matrix/micro_cartan_attn/: Cargo.toml  README.md
Semantic_Cartan_Matrix/micro_cartan_attn/.claude-flow/metrics/: performance.json  task-metrics.json
Semantic_Cartan_Matrix/micro_cartan_attn/src/: attention.rs  cartan.rs  lib.rs  orthogonalization.rs  regularization.rs
Semantic_Cartan_Matrix/micro_core/: README.md
Semantic_Cartan_Matrix/micro_core/.claude-flow/metrics/: performance.json  task-metrics.json
Semantic_Cartan_Matrix/micro_core/src/: lib.rs  projection.rs  types.rs
Semantic_Cartan_Matrix/micro_core_test/: Cargo.toml  README.md
Semantic_Cartan_Matrix/micro_core_test/.claude-flow/metrics/: performance.json  task-metrics.json
Semantic_Cartan_Matrix/micro_core_test/src/: lib.rs  micronet.rs  types.rs
Semantic_Cartan_Matrix/micro_metrics/: Cargo.toml  README.md
Semantic_Cartan_Matrix/micro_metrics/src/: collector.rs  export.rs  timing.rs
Semantic_Cartan_Matrix/micro_routing/: Cargo.toml  README.md
Semantic_Cartan_Matrix/micro_routing/src/: lib.rs
Semantic_Cartan_Matrix/micro_swarm/: Cargo.toml  README.md
Semantic_Cartan_Matrix/micro_swarm/.claude-flow/metrics/: performance.json  task-metrics.json
Semantic_Cartan_Matrix/micro_swarm/src/: lib.rs  orchestrator.rs
Semantic_Cartan_Matrix/micro_swarm_original/: Cargo.toml  README.md
Semantic_Cartan_Matrix/micro_swarm_original/.claude-flow/metrics/: performance.json  task-metrics.json
Semantic_Cartan_Matrix/micro_swarm_original/examples/: basic_orchestration.rs
Semantic_Cartan_Matrix/micro_swarm_original/src/: agent.rs  dashboard.rs  lib.rs  memory.rs  metrics.rs  orchestrator.rs  plugin.rs  scheduler.rs
Semantic_Cartan_Matrix/micro_swarm_original/tests/: integration_test.rs
Semantic_Cartan_Matrix/plans/: plan1.md  plan2.md  plan3.md  readme.md
examples/: logging_example.rs
geometric_langlands_conjecture/: AUDIT_REPORT.md  CLI_DEVELOPMENT_REPORT.md  COMPILATION_PROGRESS_REPORT.md  COMPLETION_STATUS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REPORT.md  ISSUE_161_PROGRESS.md  ISSUE_161_PROGRESS_UPDATE.md  ISSUE_UPDATE.md  ISSUE_UPDATE_161.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PHYSICS_IMPLEMENTATION.md  PROOF.md  PUBLICATION_SUCCESS.md  README.md  TEST_FIX_PROGRESS.md  USAGE_EXAMPLES.md  VERIFICATION_SUMMARY.md  performance.toml  results.json  verify_math.rs  verify_math_simple.rs
geometric_langlands_conjecture/docs/: SPECTRAL_THEORY.md
geometric_langlands_conjecture/docs/performance/: optimization_guide.md
geometric_langlands_conjecture/geometric-langlands-cli/: Cargo.toml
geometric_langlands_conjecture/src/: lib.rs
geometric_langlands_conjecture/wasm/: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  ROADMAP.md  publish.sh
memory/agents/: README.md
memory/sessions/: README.md
simulator/docs/: architecture.md  integration.md  memory-layout-diagram.md  thread-pool-patterns.md  wasmtime-shared-memory-config.md
simulator/neuro_synaptic_simulator/: BUILD_STATUS.md  CLI.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  INTEGRATION_REPORT.md  QUICKSTART.md  README.md  WASM_README.md  build-wasm.sh  demo.html  test_results.json
simulator/neuro_synaptic_simulator/.claude-flow/metrics/: performance.json  task-metrics.json
simulator/neuro_synaptic_simulator/batch_results/: compute_intensive_results.json  large_network_results.json  max_network_results.json  medium_network_results.json  memory_intensive_results.json  small_network_results.json
simulator/neuro_synaptic_simulator/batch_test/: compute_intensive_results.json  large_network_results.json  max_network_results.json  medium_network_results.json  memory_intensive_results.json  small_network_results.json
simulator/neuro_synaptic_simulator/examples/: batch_config.json  minimal_demo.rs  parallel_demo.rs  simple_neural_net.rs  timing_demo.rs
simulator/neuro_synaptic_simulator/src/: lib.rs  main.rs  simple_main.rs
simulator/neuro_synaptic_simulator/src/core/: mod.rs  processing_unit.rs  scheduler.rs
simulator/neuro_synaptic_simulator/src/logging/: mod.rs
simulator/neuro_synaptic_simulator/src/memory/: mod.rs  shared.rs
simulator/neuro_synaptic_simulator/src/performance/: mod.rs  monitor.rs
simulator/neuro_synaptic_simulator/src/timing/: mod.rs  model.rs  power.rs
simulator/neuro_synaptic_simulator/src/visualization/: mod.rs
simulator/neuro_synaptic_simulator/src/wasm/: engine.rs  instance_manager.rs  loader.rs  memory.rs  mod.rs
simulator/neuro_synaptic_simulator/src/wasm_bindings/: memory_bridge.rs  mod.rs  neural_ops.rs  performance.rs  simd_ops.rs
simulator/neuro_synaptic_simulator/tests/: README.md  parallel_tests.rs
simulator/neuro_synaptic_simulator/tests/benchmarks/: mod.rs  performance_bench.rs
simulator/neuro_synaptic_simulator/tests/fixtures/: build_wasm.sh
simulator/neuro_synaptic_simulator/tests/fixtures/wasm_modules/: add.wat  compute.wat  memory_grow.wat  memory_intensive.wat  memory_test.wat  multiply.wat  neural_net.wat  parallel_compute.wat  simd_test.wat
simulator/neuro_synaptic_simulator/tests/integration/: cli_tests.rs  mod.rs  parallel_tests.rs
simulator/neuro_synaptic_simulator/tests/unit/: cartan_orthogonality_tests.rs
simulator/neuro_synaptic_simulator/viz_output/: network_graph.html  performance.json
simulator/plans/: implementation.md
simulator/src/: lib.rs  main.rs
src/: lib.rs
src/logging/: logger.rs  mod.rs  schema.rs  verification.rs
(+17 files in other folders)
