[package]
name = "micro_cartan_attn"
version = "0.1.0"
edition = "2021"
authors = ["Neuro-Synaptic Simulator Team"]
license = "MIT OR Apache-2.0" 
repository = "https://github.com/ruvnet/ruv-FANN"
keywords = ["neural-networks", "attention", "cartan-matrix", "orthogonal"]
categories = ["science", "mathematics"]
description = "Cartan matrix attention mechanisms and orthogonal regularization"

[dependencies]
# Standalone version - no micro_core dependency
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
nalgebra = { version = "0.33", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2", default-features = false }

[features]
default = ["gram-schmidt"]
std = ["serde/std", "serde_json/std", "nalgebra/std", "num-traits/std"]
gram-schmidt = []
training = []
simd = []
analysis = []
blas = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
approx = "0.5"

[workspace]
# Empty workspace to prevent inheritance from parent