[workspace]

[package]
name = "micro_core"
version = "0.1.0"
edition = "2021"
authors = ["rUv-FANN Team"]
license = "Apache-2.0 OR MIT"
description = "Core no_std Semantic Cartan Matrix implementation for rUv-FANN"
repository = "https://github.com/ruvnet/ruv-FANN"
keywords = ["neural-network", "cartan-matrix", "no-std", "wasm", "simd"]
categories = ["no-std", "algorithms", "mathematics", "wasm"]

[features]
default = []
std = []
wasm = ["wasm-bindgen", "getrandom/js"]
simd = []

[dependencies]
# Core dependencies - all no_std compatible
libm = { version = "0.2", default-features = false }
heapless = { version = "0.8", default-features = false }
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }

# Optional dependencies
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = "z"

[[example]]
name = "basic_usage"
required-features = ["std"]