[package]
name = "neuro_synaptic_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Neuro-Synaptic Simulator Team"]
description = "A high-performance neuro-synaptic chip simulator with 256 cores and WASM support"
license = "MIT"

[[bin]]
name = "ruv-fann-simulator"
path = "src/minimal_main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasmtime = "28.0"
wasmtime-wasi = "28.0"
wasmparser = "0.221"
wat = "1.236"
sha2 = "0.10"
rayon = "1.10"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
bytemuck = { version = "1.14", features = ["derive"] }
bincode = "1.3"

[[example]]
name = "timing_demo"
path = "examples/timing_demo.rs"

[[example]]
name = "parallel_demo"
path = "examples/parallel_demo.rs"

[[example]]
name = "minimal_demo"
path = "examples/minimal_demo.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "performance_bench"
harness = false
path = "tests/benchmarks/performance_bench.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
